--- a/job/Bihar BSSC Inter Level Online Form/index.html
+++ b/job/Bihar BSSC Inter Level Online Form/index.html
@@ -16,7 +16,7 @@
      
     <img src="../../logo.png" alt="logo">
     <h1>Result reader</h1>
-    <h2>A way to your sucess</h2>
+    <h2>resultreader.online</h2>
    
   </header>
 
