--- a/admitcard/biharpolice.html
+++ b/admitcard/biharpolice.html
@@ -82,7 +82,7 @@ Bihar Police Subordinate Services Commission (BPSSC), has released the Pre Admit
 
     </div>
     <div class="grid-box">
-
+<h3>ooo</h3>
     </div>
    </section>
    
