--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
            <li><a href="/job/up police computer oprator/" target="_blank">UP Police Computer Operator Grade-A Correction Form 2026</a></li>
            <li><a href="/job/RBI Bank Office Attendant Online Form/" target="_blank">RBI Bank Office Attendant Online Form 2026 Start</a></li>
             <li><a href="/job/up police constable/" target="_blank">UP Police Constable Recruitment 2026</a></li>
-            <li><a href="/job/Railway RRB Group D Online Form/">Railway RRB Group D Online Form 2026 start</a></li>
+            <li><a href="/job/Railway RRB Group D Online Form/" target="_blank">Railway RRB Group D Online Form 2026 start</a></li>
             <li><a href="/job/UPSSSC Lekhpal Online Form 2026/" target="_blank">UPSSSC Lekhpal Online Form 2026 start</a></li>
             <li><a href="/job/Bihar BPSC ATPS Online Form 2026/" target="_blank">Bihar BPSC ATPS Online Form 2026 Start</a></li>
             <li><a href="/job/Bihar BSSC Inter Level Online Form/" target="_blank">Bihar BSSC Inter Level Online Form 2026 Last Date Extend</a></li>
             <li><a href="/job/RSSB Clerk Jr-II  Junior Assistant Online Form/" target="_blank">RSSB Clerk Jr-II and Junior Assistant Online Form 2026 start </a></li>
-            <li><a href="/job/RSSB Agriculture Supervisor Online/">RSSB Agriculture Supervisor Online Form 2026 start</a></li>
+            <li><a href="/job/RSSB Agriculture Supervisor Online/" target="_blank">RSSB Agriculture Supervisor Online Form 2026 start</a></li>
             <!-- <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
@@ -119,6 +119,7 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
 
 
     </div>
+    <p style="color: rgb(6, 2, 26);">यदि आपके पास कोई सुझाव हों, तो कृपया हमें WhatsApp के माध्यम से सूचित करें</p>
   </section>
   
 
