--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
 
 <meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
-  
+  <meta property="og:title" content="resultreader">
+<meta property="og:url" content="https://resultreader.online">
+<meta property="og:image" content="https://drive.google.com/file/d/1_-fFZwz7INngoveopzitC0d3-t8gOkSs/view?usp=drive_open">
 </head>
 <body>
 
