--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
-<meta property="og:image" content="https://drive.google.com/file/d/1_-fFZwz7INngoveopzitC0d3-t8gOkSs/view?usp=drive_open">
+
+<meta property="og:title" content="Result Reader - Latest Jobs, Results, Admit Card & Answer Key">
+<meta property="og:description" content="Ads-Free वेबसाइट जहाँ आपको सभी Latest Results, Admit Card और Answer Key की सही और अपडेटेड जानकारी मिलेगी।">
+<meta property="og:url" content="https://resultreader.online">
+<meta property="og:image" content="https://resultreader.online/logo.png">
+<meta property="og:type" content="website">
 </head>
 <body>
 
