--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:title" content="Result Reader - Latest Jobs, Results, Admit Card & Answer Key">
 <meta property="og:description" content="Ads-Free वेबसाइट जहाँ आपको सभी Latest Results, Admit Card और Answer Key की सही और अपडेटेड जानकारी मिलेगी।">
 <meta property="og:url" content="https://resultreader.online">
-<meta property="og:image" content="https://resultreader.online/logo.png">
+<meta property="og:image" content="https://resultreader.online/og.png">
 <meta property="og:type" content="website">
 </head>
 <body>
