--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
    <a href="#admit">Admit card</a>
    <a href="#answer">Answer key</a>
     </nav>
- 
+
+</div>
+
 
   <section>
    
@@ -123,10 +125,15 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
       <div class="card">
 
       </div>
-
+<h2>Admission</h2>
+<ul>
+  <li><a href="/admission/bihar-deled-2026-28.html">Bihar D.E.L.E.D Admission 2026-28</a></li>
+  <!-- <li><a href=""></a></li>
+  <li><a href=""></a></li> -->
+</ul>
 
     </div>
-    <p style="color: rgb(6, 2, 26);">यदि आपके पास कोई सुझाव हों, तो कृपया हमें WhatsApp के माध्यम से सूचित करें</p>
+    <p style="color: rgb(6, 2, 26); margin-top: 45px; padding: 15px; background-color: khaki; font-weight: 500; size: 20px;">यदि आपके पास कोई सुझाव हों, तो कृपया हमें WhatsApp के माध्यम से सूचित करें</p>
   </section>
   
 
@@ -147,11 +154,19 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
 </section>
 <section class="footer">
  
-    <p>© Result reader 2025 All right reserved  </p>
+     <a href="about.html" style="text-decoration: none;">About us</a>
+  <a href="term.html" style="text-decoration: none; margin-left: 10px;">Term and condition</a>
+ 
+
+ 
+    <p style="margin-top: 20px;">© Result reader 2025 All right reserved  </p>
   
 </section>
  
  
+
+ 
+   
 
 </body>
 </html>
