--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
         
       </div>
       <div class="card">
-
+<h2>Admission</h2>
+<ul>
+  <li><a href="/admission/bihar-deled-2026-28.html">Bihar D.E.L.E.D Admission 2026-28</a></li>
+  <!-- <li><a href=""></a></li>
+  <li><a href=""></a></li> -->
+</ul>
       </div>
 <h2>Admission</h2>
 <ul>
