--- a/admission/bihar-deled-2026-28.html
+++ b/admission/bihar-deled-2026-28.html
@@ -106,7 +106,7 @@
       <h3>importent links</h3>
       <table border="3px">
         <tr>
-          <td>Download Result</td>
+          <td>Apply online</td>
           <td><a href="https://form.bsebdeled.com/login" target="_blank">click here</a></td>
         </tr>
         
