--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       <div class="card">
         <h2 id="job">Latest job</h2>
         <ul>
+          <li><a href="/job/indian-post-gds/" target="_blank">Indian post GDS 2026 start-soon</a></li>
+          <li><a href="/job/csir-cdri" target="_blank">csir-cdri recruitment 2026 </a></li>
            <li><a href="/job/up police computer oprator/" target="_blank">UP Police Computer Operator Grade-A Correction Form 2026</a></li>
            <li><a href="/job/RBI Bank Office Attendant Online Form/" target="_blank">RBI Bank Office Attendant Online Form 2026 Start</a></li>
             <li><a href="/job/up police constable/" target="_blank">UP Police Constable Recruitment 2026</a></li>
@@ -125,9 +127,9 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
       <div class="card">
 <h2>Admission</h2>
 <ul>
-  <li><a href="/admission/bihar-deled-2026-28.html">Bihar D.E.L.E.D Admission 2026-28</a></li>
-  <!-- <li><a href=""></a></li>
-  <li><a href=""></a></li> -->
+  <li><a href="/admission/bihar-deled-2026-28.html" target="_blank">Bihar D.E.L.E.D Admission 2026-28</a></li>
+   <li><a href="/admission/cuet-pg-2026.html" target="_blank">CUET PG 2026 APPLICATION </a></li>
+  <!-- <li><a href=""></a></li>  -->
 </ul>
       </div>
       
