--- a/job/csir-cdri/index.html
+++ b/job/csir-cdri/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>csir central </title>
 <link rel="stylesheet" href="../job.css">
+<link rel="stylesheet" href="/job/job.css">
 <link rel="icon" type="image/png" href="../../logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
 
