--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <title>Result reader</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="logo.png">
-  <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
+  <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
+यह वेबसाइट छात्रों को सही और उपयोगी जानकारी सरल भाषा में उपलब्ध कराने के लिए बनाई गई है, ताकि वे अपनी पढ़ाई, परीक्षा और करियर से जुड़े फैसले आसानी से ले सकें।">
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in,">
+<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESULTREADER">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
