--- a/job/Railway RRB Group D Online Form/index.html
+++ b/job/Railway RRB Group D Online Form/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Railway RRB Group-D (Level-1) Recruitment 2026</title>
+    <title>Railway RRB Group-D (Level-1) Recruitment 2026 start</title>
 <link rel="stylesheet" href="../job.css">
 <link rel="icon" type="image/png" href="../../logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
@@ -200,11 +200,11 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
           <td>Download official notification</td>
           <td><a href="" target="_blank">click here</a></td>
         </tr>
-        <!-- <tr>
+        <tr>
           <td>check syllabus </td>
-          <td><a href="">click here</a></td>
+          <td><a href="https://rrbapply.gov.in/#/auth/landing">click here</a></td>
         </tr>
-        <tr> -->
+        <tr> 
           <td>Official website</td>
           <td><a href="https://indianrailways.gov.in/" target="_blank">click here</a></td>
         </tr>
