--- a/job/indian-post-gds/index.html
+++ b/job/indian-post-gds/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <nav>
-   <a href="../index.html">Home</a></nav>
+   <a href="../../index.html">Home</a></nav>
    <div class="detail">
 <!-- job name -->
 <h1>indian post GDS 2026</h1> 
