--- a/job/Railway RRB Group D Online Form/index.html
+++ b/job/Railway RRB Group D Online Form/index.html
@@ -42,11 +42,11 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
       <table border="2px">
         <tr>
           <td>Online Apply start Date</td>
-          <td>21 January 2026</td>
+          <td>31 January 2026</td>
         </tr>
         <tr>
           <td>Online Apply Last Date</td>
-          <td>20 February 2026  </td>
+          <td>2 march 2026  </td>
         </tr>
         <tr>
           <td>Last Date of fee Payment</td>
@@ -194,16 +194,16 @@ Railway Recruitment Boards (RRB), has released short notice on official website 
       <table border="3px">
         <tr>
           <td>Apply online link</td>
-          <td><a href="" target="_blank">click here</a></td>
+          <td><a href="https://rrbapply.gov.in/#/auth/landing" target="_blank">click here</a></td>
         </tr>
-        <tr>
+        <!-- <tr>
           <td>Download official notification</td>
-          <td><a href="" target="_blank">click here</a></td>
-        </tr>
-        <tr>
+          <td><a href="https://rrbapply.gov.in/#/auth/landing" target="_blank">click here</a></td>
+        </tr> -->
+        <!-- <tr>
           <td>check syllabus </td>
           <td><a href="https://rrbapply.gov.in/#/auth/landing">click here</a></td>
-        </tr>
+        </tr> -->
         <tr> 
           <td>Official website</td>
           <td><a href="https://indianrailways.gov.in/" target="_blank">click here</a></td>
