--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
 यह वेबसाइट छात्रों को सही और उपयोगी जानकारी सरल भाषा में उपलब्ध कराने के लिए बनाई गई है, ताकि वे अपनी पढ़ाई, परीक्षा और करियर से जुड़े फैसले आसानी से ले सकें।">
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESULTREADER">
+<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
@@ -130,7 +130,7 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
 <ul>
   <li><a href="/admission/bihar-deled-2026-28.html" target="_blank">Bihar D.E.L.E.D Admission 2026-28</a></li>
    <li><a href="/admission/cuet-pg-2026.html" target="_blank">CUET PG 2026 APPLICATION </a></li>
-  <!-- <li><a href=""></a></li>  -->
+  <li><a href="admission/NTA-cuet-ug.html" target="_blank">NTA CUET UG Admission 2026</a></li> 
 </ul>
       </div>
       
@@ -147,6 +147,13 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
 
 हम पूरी कोशिश करते हैं कि दी गई जानकारी सही और अपडेटेड रहे, लेकिन किसी भी प्रकार की त्रुटि या बदलाव की स्थिति में कृपया संबंधित आधिकारिक वेबसाइट को ही अंतिम एवं प्रमाणिक स्रोत मानें।
 इस वेबसाइट का उद्देश्य केवल सूचना देना है, न कि किसी भी सरकारी या निजी संस्था का प्रतिनिधित्व करना।</p>
+<p>ResultReader is an informational website created to help students and job aspirants by providing accurate and timely updates related to jobs, results, admit cards, and answer keys. All information published on this website is collected from official websites, notifications, and trusted public sources.
+
+ResultReader is completely ads-free and does not display any misleading, promotional, or third-party advertisements. Our primary objective is to deliver clear, reliable, and student-focused information.
+
+While we make every effort to keep the content updated and correct, ResultReader does not guarantee complete accuracy. In case of any error, change, or discrepancy, users are advised to visit the respective official website, which should be considered the final and authentic source.
+
+ResultReader is for informational purposes only and is not affiliated with or representative of any government or private organization.</p>
 <section class="contact" id="contact">
     <h2 >Contact Me</h2>
     <p>📧 Email: <a href="mailto:ankitkumarghogha@gmail.com" style="color:#3117d9;text-decoration:none;">ankitkumarghogha@gmail.com</a></p>
