--- a/admission/NTA-cuet-ug.html
+++ b/admission/NTA-cuet-ug.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>NTA cuet ug admission 2026  apply start</title>
 <link rel="stylesheet" href="result.css">
 <link rel="icon" type="image/png" href="../logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card और Answer Key की सही व अपडेटेड जानकारी मिलती है।">
 
-<meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, cuet pg 2026">
-<meta property="og:title" content="Result Reader - Latest Jobs, Results, Admit Card & Answer Key">
-<meta property="og:description" content="Ads-Free वेबसाइट जहाँ आपको सभी Latest Results, Admit Card और Answer Key की सही और अपडेटेड जानकारी मिलेगी।">
+<meta name="keywords" content="cuet ug admission,latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, cuet pg 2026">
+<meta property="og:title" content="Result Reader - Latest Jobs, Results, Admit Card & Answer Key ,admission">
+<meta property="og:description" content="nta cuet ug,Ads-Free वेबसाइट जहाँ आपको सभी Latest Results, Admit Card और Answer Key की सही और अपडेटेड जानकारी मिलेगी।">
 <meta property="og:url" content="https://resultreader.online">
 <meta property="og:image" content="https://resultreader.online/og.png">
 <meta property="og:type" content="website">
@@ -29,9 +29,9 @@
    <a href="../index.html">Home</a></nav>
    <div class="detail">
 <!-- job name -->
-<h1>NTA CUET PG Online Form 2026</h1> 
+<h1>NTA CUET ug Online Form 2026</h1> 
 <!-- job detail -->
-<p>CUET PG (Common University Entrance Test – Postgraduate) is a national-level computer-based entrance exam conducted by the National Testing Agency (NTA) for admission to Master’s and other postgraduate programs (MA, MSc, MCom, MBA, LLM, MEd, etc.) in Central, State, private, and Deemed universities across India for the 2026-27 academic session.
+<p>NTA CUET UG (Common University Entrance Test – Undergraduate) is a national-level entrance exam conducted by the National Testing Agency for admission to undergraduate courses in Central, State, Deemed, and Private Universities across India. Candidates seeking admission in BA, BSc, BCom, BBA, BCA, Engineering, Law, and other UG programs must apply through the CUET UG online form. This exam allows students to apply to multiple universities through a single entrance test. Apply online before the last date after checking eligibility, exam pattern, and official notification.
  
 
 </p>
@@ -42,20 +42,20 @@
       <table border="2px">
         <tr>
           <td>Online Apply start Date</td>
-          <td> 14 December 2025</td>
+          <td> 3 January 2026</td>
         </tr>
         <tr>
           <td>Online Apply Last Date</td>
-          <td>  23 January 2026</td>
+          <td>  30 January 2026</td>
         </tr>
         <tr>
           <td>Last Date of fee Payment</td>
-          <td>20 January 2026</td>
+          <td>31 January 2026</td>
 </td>
         </tr>
         <tr>
           <td>Exam Date</td>
-          <td>march 2026</td>
+          <td>may 2026</td>
         </tr>
         <tr>
           <td>Admit card</td>
@@ -70,54 +70,63 @@
     </div>
     <div class="grid-box">
         <h3>Eliglibty</h3>
-        <ul><li>Candidates must have completed or be in the final year of a bachelor's degree in the relevant subject from a recognized university in India.</li></ul>
+        <ul><li>Candidates who have passed or are appearing for the 10+2 (Intermediate) exam from any recognized board in India are eligible.</li></ul>
     </div>
     <div class="grid-box">
         <h3>Application Fee</h3>
         <table>
             <tr>
                 <td>General</td>
-                <td>1400 rupees</td>
+                <td>1000 rupees</td>
             </tr>
             <tr>
                 <td>OBC</td>
-                <td>1200</td>
+                <td>900</td>
             </tr>
             <tr>
                 <td>EWS</td>
-                <td>1200 rupees</td>
+                <td>900 rupees</td>
             </tr>
             <tr>
                 <td>SC</td>
-                <td>1100 rupees</td>
+                <td>800 rupees</td>
             </tr>
             <tr>
                 <td>ST</td>
-                <td>1100 rupees</td>
+                <td>800 rupees</td>
             </tr>
             <tr>
                 <td>ph candidate</td>
-                <td>1000</td>
+                <td>800</td>
 
             </tr>
             <td>Additional test paper charge</td>
-            <td>for grneral 700 rupees</td>
-            <td>For other category 600 rupees</td>
+            <td>for grneral 400 rupees Each subject</td>
+            <td>For EWS/OBC 375 rupees Each subject</td>
+            <td>SC/ST/PH: 350 rupees Each subject</td>
         </table>
     </div>
 
-   
+  
     
     <div class="grid-box">
       <h3>importent links</h3>
       <table border="3px">
         <tr>
-          <td>Download Result</td>
-          <td><a href="https://examinationservices.nic.in/ExamSys2026/Root/Home.aspx?enc=Ei4cajBkK1gZSfgr53ImFWAbOef0JkBZzg/BVVqGR2DZDcQsil9BGw0L/dcLf/EP" target="_blank">click here</a></td>
+          <td>Apply online</td>
+          <td><a href="https://examinationservices.nic.in/ExamSysCUETUG26/root/Home.aspx?enc=Ei4cajBkK1gZSfgr53ImFYsjZOdyj8DuPcxGBqAK2DwPXgGzSvy8OkvXqQJ0Bni9" target="_blank">click here</a></td>
+        </tr>
+        <tr>
+            <td>check syllabus</td>
+            <td><a href="https://cuet.nta.nic.in/cuetug-2026-syllabus/" target="_blank">click here</a></td>
+        </tr>
+        <tr>
+            <td>university list</td>
+            <td><a href="https://cuet.nta.nic.in/participating-universities/" target="_blank">click here</a></td>
         </tr>
         
           <td>official website</td>
-          <td><a href="https://exams.nta.nic.in/cuet-pg/" target="_blank">click here</a></td>
+          <td><a href="https://cuet.nta.nic.in/" target="_blank">click here</a></td>
         </tr>
       </table>
 
