--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" href="logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
 यह वेबसाइट छात्रों को सही और उपयोगी जानकारी सरल भाषा में उपलब्ध कराने के लिए बनाई गई है, ताकि वे अपनी पढ़ाई, परीक्षा और करियर से जुड़े फैसले आसानी से ले सकें।">
+<meta name="description" content="Result Reader is an ads-free educational website providing latest jobs, results, admit cards, admissions, scholarships, and answer keys with accurate and updated information to help students make informed academic and career decisions.">
 
 <meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
   <meta property="og:title" content="resultreader">
@@ -158,7 +159,7 @@ ResultReader is for informational purposes only and is not affiliated with or re
     <h2 >Contact Me</h2>
     <p>📧 Email: <a href="mailto:ankitkumarghogha@gmail.com" style="color:#3117d9;text-decoration:none;">ankitkumarghogha@gmail.com</a></p>
     <p>whatsapp: <a href="https://wa.me/7564010339">click here</a></p>
-     <p>Design and devloped by IITIAN ANKIT KUMAR</p>
+     <p style="margin-top: 8px;">Design and devloped by IITIAN ANKIT KUMAR</p>
 </section>
 <section class="footer">
  
