--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <title>Result reader</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="logo.png">
-  <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
+  
+<meta name="description" content="Result Reader is an ads-free educational website providing latest jobs, results, admit cards, admissions, scholarships, and answer keys with accurate and updated information to help students make informed academic and career decisions.our motive is not making money by showing adds our motive is give some useful information about result admit card latest job admission answer key to help student the main thing student make our dessition abot career study we provide all information in simple way">
+
+<meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
 यह वेबसाइट छात्रों को सही और उपयोगी जानकारी सरल भाषा में उपलब्ध कराने के लिए बनाई गई है, ताकि वे अपनी पढ़ाई, परीक्षा और करियर से जुड़े फैसले आसानी से ले सकें।">
-<meta name="description" content="Result Reader is an ads-free educational website providing latest jobs, results, admit cards, admissions, scholarships, and answer keys with accurate and updated information to help students make informed academic and career decisions.">
 
 <meta name="keywords" content="latest job, result, admit card, answer key, sarkari job, result reader, sarkari job,admit card, answer key, new goverment vaccency, new goverment job, bihar board result, sarkari exam, sarkari exam result, ssc ,sscgd, ssc cgl, ccs chsl , result reader.com, result reader.in, resultreader, resultreader.com,resultreader.in, resultreader,resultreader.online,result reader,Result reader,RESULT READER,RESUL READER">
   <meta property="og:title" content="resultreader">
 <meta property="og:url" content="https://resultreader.online">
 
 <meta property="og:title" content="Result Reader - Latest Jobs, Results, Admit Card & Answer Key">
+<meta property="og:description" content="An ads-free website where you get accurate and updated information on all the latest results, admit cards, and answer keys">
+
 <meta property="og:description" content="Ads-Free वेबसाइट जहाँ आपको सभी Latest Results, Admit Card और Answer Key की सही और अपडेटेड जानकारी मिलेगी।">
 <meta property="og:url" content="https://resultreader.online">
 <meta property="og:image" content="https://resultreader.online/og.png">
@@ -141,17 +145,12 @@ NTA UGC NET December Answer Key 2026  Out</a></li>
       
    
   </section>
-   <p style="color: rgb(6, 2, 26); margin-top: 45px; padding: 15px; background-color: khaki; font-weight: 500; size: 20px;">यदि आपके पास कोई सुझाव हों, तो कृपया हमें WhatsApp के माध्यम से सूचित करें</p>
+   <p style="color: rgb(6, 2, 26); margin-top: 45px; padding: 15px; background-color: khaki; font-weight: 500; size: 20px;">"For any suggestions, please send us a message on WhatsApp.</p>
 
   <section class="contact">
    
     <h3>Description</h3>
-   <p>यह वेबसाइट विद्यार्थियों और अभ्यर्थियों की सहायता के उद्देश्य से बनाई गई है। यहाँ उपलब्ध सभी नौकरी, रिज़ल्ट, एडमिट कार्ड और उत्तर कुंजी से संबंधित जानकारी विभिन्न आधिकारिक स्रोतों के आधार पर प्रदान की जाती है।
-
-यह वेबसाइट पूरी तरह से Ads-Free (विज्ञापन मुक्त) है, यानी यहाँ किसी भी प्रकार के भ्रामक या अनावश्यक विज्ञापन नहीं दिखाए जाते। हमारा उद्देश्य केवल सही और उपयोगी जानकारी प्रदान करना है।
-
-हम पूरी कोशिश करते हैं कि दी गई जानकारी सही और अपडेटेड रहे, लेकिन किसी भी प्रकार की त्रुटि या बदलाव की स्थिति में कृपया संबंधित आधिकारिक वेबसाइट को ही अंतिम एवं प्रमाणिक स्रोत मानें।
-इस वेबसाइट का उद्देश्य केवल सूचना देना है, न कि किसी भी सरकारी या निजी संस्था का प्रतिनिधित्व करना।</p>
+   
 <p>ResultReader is an informational website created to help students and job aspirants by providing accurate and timely updates related to jobs, results, admit cards, and answer keys. All information published on this website is collected from official websites, notifications, and trusted public sources.
 
 ResultReader is completely ads-free and does not display any misleading, promotional, or third-party advertisements. Our primary objective is to deliver clear, reliable, and student-focused information.
@@ -159,6 +158,15 @@ ResultReader is completely ads-free and does not display any misleading, promoti
 While we make every effort to keep the content updated and correct, ResultReader does not guarantee complete accuracy. In case of any error, change, or discrepancy, users are advised to visit the respective official website, which should be considered the final and authentic source.
 
 ResultReader is for informational purposes only and is not affiliated with or representative of any government or private organization.</p>
+
+<p>यह वेबसाइट विद्यार्थियों और अभ्यर्थियों की सहायता के उद्देश्य से बनाई गई है। यहाँ उपलब्ध सभी नौकरी, रिज़ल्ट, एडमिट कार्ड और उत्तर कुंजी से संबंधित जानकारी विभिन्न आधिकारिक स्रोतों के आधार पर प्रदान की जाती है।
+
+यह वेबसाइट पूरी तरह से Ads-Free (विज्ञापन मुक्त) है, यानी यहाँ किसी भी प्रकार के भ्रामक या अनावश्यक विज्ञापन नहीं दिखाए जाते। हमारा उद्देश्य केवल सही और उपयोगी जानकारी प्रदान करना है।
+
+हम पूरी कोशिश करते हैं कि दी गई जानकारी सही और अपडेटेड रहे, लेकिन किसी भी प्रकार की त्रुटि या बदलाव की स्थिति में कृपया संबंधित आधिकारिक वेबसाइट को ही अंतिम एवं प्रमाणिक स्रोत मानें।
+इस वेबसाइट का उद्देश्य केवल सूचना देना है, न कि किसी भी सरकारी या निजी संस्था का प्रतिनिधित्व करना।</p>
+
+
 <section class="contact" id="contact">
     <h2 >Contact Me</h2>
     <p>📧 Email: <a href="mailto:ankitkumarghogha@gmail.com" style="color:#3117d9;text-decoration:none;">ankitkumarghogha@gmail.com</a></p>
