--- a/latest-job.html
+++ b/latest-job.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Result reader Latest Job</title>
+  <title>Result Reader – Latest Jobs, Results & Admit Card</title>
+
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="logo.png">
   <meta name="description" content="Result Reader एक Ads-Free वेबसाइट है जहाँ आपको Latest Jobs, Result, Admit Card, Admission, scholarship और Answer Key की सही व अपडेटेड जानकारी मिलती है। हमारा उद्देश्य विज्ञापन दिखाकर पैसे कमाना नहीं है, बल्कि छात्रों की मदद करना है।
@@ -19,6 +22,9 @@
 <meta property="og:url" content="https://resultreader.online">
 <meta property="og:image" content="https://resultreader.online/og.png">
 <meta property="og:type" content="website">
+<meta name="robots" content="index, follow">
+<meta name="author" content="Result Reader">
+
 </head>
 <body>
 
