--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
 <meta property="og:url" content="https://resultreader.online">
 <meta property="og:image" content="https://resultreader.online/og.png">
 <meta property="og:type" content="website">
+<link rel="canonical" href="https://resultreader.online/">
+ <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://resultreader.online/" },
+      { "@type": "ListItem", "position": 2, "name": "Results", "item": "https://resultreader.online/latest-job.html" },
+      { "@type": "ListItem", "position": 3, "name": "Admit Card", "item": "https://resultreader.online/Admit-card.html" },
+      { "@type": "ListItem", "position": 3, "name": "Admit Card", "item": "https://resultreader.online/Result.html" },
+      { "@type": "ListItem", "position": 3, "name": "Admit Card", "item": "https://resultreader.online/about.html" }
+
+    ]
+  }
+  </script>
+
 </head>
 <body>
 
@@ -43,6 +59,7 @@
    <a href="#admit">Admit card</a>
    <a href="#answer">Answer key</a>
     </nav>
+   
 
 </div>
 
