--- a/tools/index.html
+++ b/tools/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Result reader tools image resizer, pdf multi function,pdf split</title>
      <link rel="icon" type="image/png" href="../logo.png">
+     <meta property="og:description" content="free tool for pdf & image all tool are avalible here free">
+<meta property="og:url" content="https://resultreader.online/tools/">
+<meta property="og:image" content="https://resultreader.online/tools/img/drpdf.jpeg">
+<meta property="og:type" content="website">
+<link rel="canonical" href="https://resultreader.online/tools/">
     <style>
         /* --- CSS Variables --- */
         :root {
@@ -137,6 +142,14 @@
     </div>
 
     <div class="header">
+        <table>
+            <tr>
+                <td><img src="/tools/img/drpdf.jpeg" style="width: 200px; border-radius: 12px;" alt=""></td>
+                <td style="text-align: center;"><h1 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;" >DR.PDF & Image</h1>
+                <p>A compleate solution of pdf and image </p>
+                </td>
+            </tr>
+        </table>
         <h1 ">Result reader Tools</h1>
         <h1 style="font-size: 30px;">resultreader.online</h1>
         <p>Aapke kaam ke saare tools ek hi jagah par</p>
