--- a/tools/index.html
+++ b/tools/index.html
@@ -159,66 +159,66 @@
     </nav>
   
     <div class="tool-grid">
-        <a href="pdf-to-img.html" target="_blank" class="card">
+        <a href="/tools/pdf-to-img.html" target="_blank" class="card">
             <img src="/tools/img/pdf to img (1).png" alt="PDF to IMG" class="tool-logo">
             <h3>Image to PDF and PDF to Image</h3>
             <p>PDF ko Image me and image ko pdf me badle.</p>
             <div class="btn">Start</div>
         </a>
 
-        <a href="image-resize.html" target="_blank" class="card">
+        <a href="/tools/image-resize.html" target="_blank" class="card">
             <img src="/tools/img/img resizer (1).png" alt="IMG to PDF" class="tool-logo">
             <h3>Image Resizer and compressor</h3>
             <p>Apni photos ko ek professional PDF file banayein.</p>
             <div class="btn">Convert</div>
         </a>
 
-        <a href="age-calculator.html" target="_blank" class="card">
+        <a href="/tools/age-calculator.html" target="_blank" class="card">
             <img src="/tools/img/age cal (1).png" alt="Age Calculator" class="tool-logo">
             <h3>Age Calculator</h3>
             <p>Apni exact umar, mahine aur din ka pata lagayein.</p>
             <div class="btn">Calculate</div>
         </a>
 
-        <a href="pdf-split.html" target="_blank" class="card">
+        <a href="/tools/pdf-split.html" target="_blank" class="card">
             <img src="/tools/img/split pdf (1).png" alt="PDF Tools" class="tool-logo">
             <h3>Split PDF</h3>
             <p>PDF ko alag karein page by page</p>
             <div class="btn">Manage</div>
         </a>
 
-        <a href="merge-pdf.html" target="_blank" class="card">
+        <a href="/tools/merge-pdf.html" target="_blank" class="card">
             <img src="/tools/img/merge pdf (1).png" alt="Resume Maker" class="tool-logo">
             <h3>Merge PDF</h3>
             <p>pff ko jode muktiple page with order</p>
             <div class="btn">Create</div>
         </a>
 
-        <a href="resume.html" target="_blank" class="card">
+        <a href="/tools/resume.html" target="_blank" class="card">
             <img src="/tools/img/cv maker (1).png" alt="Name on Photo" class="tool-logo">
             <h3>Resume & CV Maker</h3>
             <p>Job ke liye professional resume aur CV taiyaar karein</p>
             <div class="btn">Edit</div>
         </a>
-         <a href="photo-date.html" target="_blank" class="card">
+         <a href="/tools/photo-date.html" target="_blank" class="card">
             <img src="/tools/img/name date (1).png" alt="Name on Photo" class="tool-logo">
             <h3>Name & Date on Photo</h3>
             <p>Form bharne ke liye photo par naam aur tarikh likhein.</p>
             <div class="btn">Edit</div>
         </a>
-        <a href="multiple.html" target="_blank" class="card">
+        <a href="/tools/multiple.html" target="_blank" class="card">
             <img src="/tools/img/multiple image (1).png" alt="" class="tool-logo">
             <h3>Add multiple image</h3>
             <p>Multiple image add kare ek hi page me jaise aadhar card front and back aur pdf ya img me download kare</p>
             <div class="btn">Edit</div>
         </a>
-         <a href="word-pdf.html" target="_blank" class="card">
+         <a href="/tools/word-pdf.html" target="_blank" class="card">
             <img src="/tools/img/word to pdf (1).png" alt="Name on Photo" class="tool-logo">
             <h3>word to pdf converter</h3>
             <p>Apne word document ko pdf me convert kare</p>
             <div class="btn">convert</div>
         </a>
-        <a href="excel-pdf.html" target="_blank" class="card">
+        <a href="/tools/excel-pdf.html" target="_blank" class="card">
             <img src="/tools/img/excel to pdf (1).png" alt="Name on Photo" class="tool-logo">
             <h3>excel to pdf converter</h3>
             <p>Apne excel document ko pdf me convert kare</p>
