--- a/tools/test2.html
+++ b/tools/test2.html
@@ -68,7 +68,7 @@
 
 <div class="header">
     <h2>DR.PDF & IMG</h2>
-    <p style="font-size: 12px;">Mobile: Drag with 1 finger | Resize with Blue dot</p>
+    <p style="font-size: 12px;">Add multiple image </p>
 </div>
 
 <div class="toolbar">
